Fixed overflow issues

--- a/src/WebComponents/Attributes/PersistentObjectAttributeTranslatedString/persistent-object-attribute-translated-string.scss
+++ b/src/WebComponents/Attributes/PersistentObjectAttributeTranslatedString/persistent-object-attribute-translated-string.scss
@@ -11,4 +11,15 @@
 	span, pre, input, textarea {
 		color: var(--vi-persistent-object-attribute-foreground, --theme-foreground);
 	}
+
+	&[multiline] {
+		#multiline {
+			overflow: hidden;
+			padding: var(--theme-h5) var(--theme-h5) 0 var(--theme-h5);
+		}
+
+		button {
+			background-color: white;
+		}
+	}
 }
